--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.6.1"
+    "graphql": "^15.6.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
